@@ -1,4 +1,8 @@
 2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/amservice.c, recover-src/amrecover.c,
+	  server-src/amcheck.c, server-src/amflush.c: Add a --version argument.
+
+2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/selfcheck.c: Check return value of fgets.
 
 2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
